Bugfix: toggle switches ended up mis-aligned

--- a/src/scss/utilities/_form.scss
+++ b/src/scss/utilities/_form.scss
@@ -20,10 +20,10 @@ form.grid-form {
         display: flex;
         justify-content: space-between;
         align-items: center;
-    }
 
-    div.full-column {
-        display: block;
+        &.text-block {
+            display: block
+        }
     }
 
     hr.full-column {
